--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   </div>
   <div>
     <label>name: </label>
-    {{hero.name}}
+    <input value="{{hero.name}}" placeholder="name">
   </div>
 </h1>
