Two-Way Binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   </div>
   <div>
     <label>name: </label>
-    <input value="{{hero.name}}" placeholder="name">
+    <input [(ngModel)]="hero.name" placeholder="name">
   </div>
 </h1>
