Displaying heroes in a template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,10 @@
     <label>name: </label>
     <input [(ngModel)]="hero.name" placeholder="name">
   </div>
+  <h2>My Heroes</h2>
+  <ul class="heroes">
+    <li>
+      <!-- each hero goes here -->
+    </li>
+  </ul>
 </h1>
