Find our way back

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,5 @@
     <label>name: </label>
     <input [(ngModel)]="hero.name" placeholder="name"/>
   </div>
+  <button (click)="goBack()">Back</button>
 </div>
